# guance-cpp-demo

./: .gitignore  README.md
.github/workflows/: build-images.yml  deploy.yml  uninstall.yml
deployment/helm/: Chart.yaml  values.yaml
deployment/helm/templates/: guance-cpp-demo.yaml
src/: CMakeLists.txt  Dockerfile  Dockerfile.base  grpc_main.cc  http_main.cc  start.sh
src/foo_library/: foo_library.cc  foo_library.h
